# final_dagroup8

./: final_group8.ipynb  marketing_data.xlsx  pyproject.toml
